# Renew-AI-Agent

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.main  Dockerfile.mcp  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  run_docker.sh  update_dependencies.sh
api/: claude_api.py  mcp_client.py  mcp_server.py  openai_api.py  vector_store.py
mcp_server/: __init__.py  dashboard_factory.py  dashboard_templates.py  data_sources.py  requirements.txt  server.py  user_management.py  vector_store.py
static/css/: styles.css
static/js/: main.js
templates/: index.html
utils/: data_processor.py  report_generator.py
