[tool.poetry]
name = "renewable-energy-consultant"
version = "0.1.0"
description = "A renewable energy consultant chatbot with real-time data analysis and visualization capabilities."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "mcp_server" },
    { include = "api" }
]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
flask-socketio = "^5.3.6"
numpy = "^1.26.4"
pandas = "^2.2.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pyjwt = "^2.8.0"
pymongo = "^4.6.1"
quart = "^0.19.4"
faiss-cpu = "^1.8.0"
sentence-transformers = "^2.5.1"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.9.3"
werkzeug = "^3.0.1"
blinker = "^1.7.0"
sqlalchemy = "^2.0.28"
anthropic = "^0.18.1"
openai = "^1.12.0"
plotly = "^5.18.0"
httpx = "0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 