[tool.poetry]
name = "renewable-energy-consultant"
version = "0.1.0"
description = "A renewable energy consultant chatbot with real-time data analysis and visualization capabilities."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "mcp_server" },
    { include = "api" }
]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.3"
flask-socketio = "^5.3.6"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
pandas = "^2.1.0"
numpy = "^1.25.2"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
openai = "^1.3.0"
anthropic = "^0.5.0"
faiss-cpu = "^1.7.4"
sentence-transformers = "^2.5.1"
sqlalchemy = "^2.0.20"
plotly = "^5.18.0"
beautifulsoup4 = "^4.12.2"
aiohttp = "^3.8.5"
eventlet = "^0.33.3"
pymongo = "^4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 